<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:visibility="visible">

        <com.bon.customview.textview.ExtTextView
            android:id="@+id/tvCancel"
            style="@style/StyleContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_null_gray_selector"
            android:gravity="center"
            android:padding="@dimen/padding_layout"
            android:text="@string/cancel"
            android:textSize="@dimen/font_size_title" />

        <com.bon.customview.textview.ExtTextView
            android:id="@+id/tvTitle"
            style="@style/StyleTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="center"
            android:padding="@dimen/padding_layout"
            android:text="@string/select_value"
            android:textColor="@color/color_white" />

        <com.bon.customview.textview.ExtTextView
            style="@style/StyleContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/bg_null_gray_selector"
            android:padding="@dimen/padding_layout"
            android:text="@string/cancel"
            android:textSize="@dimen/font_size_title"
            android:visibility="invisible" />
    </TableRow>

    <RelativeLayout
        android:id="@+id/trSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_layout"
        android:gravity="center_vertical">

        <com.bon.customview.edittext.ExtEditText
            android:id="@+id/edtSearch"
            style="@style/StyleContent"
            android:layout_width="match_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_white_gray_radius"
            android:drawableLeft="@drawable/search_icon"
            android:drawablePadding="@dimen/padding_content"
            android:hint="@string/search"
            android:imeOptions="actionSearch"
            android:inputType="text" />

        <ImageView
            android:id="@+id/ivCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/padding_layout"
            android:padding="@dimen/padding_layout"
            android:src="@drawable/cancel_icon"
            android:visibility="gone" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_border"
        android:layout_marginLeft="@dimen/padding_layout"
        android:layout_marginRight="@dimen/padding_layout"
        android:background="@color/color_border" />

    <com.bon.customview.listview.ExtPagingListView
        android:id="@+id/lvData"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/padding_layout"
        android:layout_marginRight="@dimen/padding_layout"
        app:dividerColor="@color/color_border"
        app:dividerHeight="@dimen/size_border"
        app:noDataMessage="@string/no_data" />
</LinearLayout>