<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_layout"
    android:layout_marginTop="@dimen/margin_layout">

    <android.support.v7.widget.CardView
        android:id="@+id/cvBook"
        android:layout_width="match_parent"
        android:layout_height="@dimen/book_height"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_cardview_book">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/book_margin_left">

                <ImageView
                    android:id="@+id/imgMore"
                    style="@style/iconSmall"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_content"
                    android:layout_marginTop="@dimen/margin_content"
                    app:srcCompat="@drawable/ic_more_horiz_white" />

                <LinearLayout
                    android:id="@+id/llBookName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/book_name_height"
                    android:layout_below="@+id/imgMore"
                    android:orientation="vertical">

                    <com.bon.customview.textview.ExtTextView
                        android:id="@+id/txtBookName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_large"
                        app:textViewFontAssetName="@string/font_bold"
                        tool:text="The Martian" />

                    <com.bon.customview.textview.ExtTextView
                        android:id="@+id/txtBookAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtBookName"
                        android:ellipsize="end"
                        android:lines="1"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_medium"
                        app:textViewFontAssetName="@string/font_italic"
                        tool:text="Andy Weir" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llprogress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llBookName"
                    android:layout_marginTop="@dimen/margin_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ProgressBar
                        android:id="@+id/customProgress"
                        style="@style/ProgressBarOrange"
                        android:layout_width="0dp"
                        android:layout_marginRight="@dimen/margin_layout"
                        android:layout_weight="1"
                        tool:progress="50" />

                    <com.bon.customview.textview.ExtTextView
                        android:id="@+id/txtProgress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_layout"
                        android:lines="1"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/text_medium"
                        app:textViewFontAssetName="@string/font_black"
                        tool:text="50%" />

                </LinearLayout>

                <com.bon.customview.textview.ExtTextView
                    android:id="@+id/txtReadmore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/llprogress"
                    android:layout_marginTop="@dimen/margin_content"
                    android:lines="1"
                    android:text="@string/continue_read"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_medium"
                    app:textViewFontAssetName="@string/font_bold" />

                <ImageView
                    android:id="@+id/imgNext"
                    style="@style/iconSmall"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/llprogress"
                    android:layout_marginRight="@dimen/margin_layout"
                    android:layout_marginTop="@dimen/margin_content"
                    app:srcCompat="@drawable/ic_arrow_forward_white" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="@dimen/book_image_width"
        android:layout_height="@dimen/book_image_height"
        android:layout_margin="2dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgBook"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_default_book" />

            <ImageView
                android:id="@+id/imgNew"
                style="@style/iconLarge"
                android:scaleType="fitXY"
                android:src="@drawable/ic_new" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>